finished user route
